--- a/hack-express/views/admin/users/edit.jade
+++ b/hack-express/views/admin/users/edit.jade
@@ -27,6 +27,13 @@ block admin_content
           input(type="password", name="password", placeholder="Enter Password", value="#{user.password")
           label Confirm
           input(type="password", name="confirm", placeholder="Confirm Password", value="#{user.password")
+          label Team
+          select(name="team_id")
+            each team in teams
+              if (team.id == user.team_id)
+                option(value="#{team.id}", selected="selected") #{team.name}
+              else
+                option(value="#{team.id}") #{team.name}
       div.form-actions
           button(type="submit").btn.btn-primary Save changes
           a(href="/admin/users").btn.btn-link Cancel
