--- a/hack-express/views/includes/head.jade
+++ b/hack-express/views/includes/head.jade
@@ -28,9 +28,11 @@ head
     title Hack Warz
   
   link(rel='stylesheet', type='text/css', href='/stylesheets/fonts.css')
-  link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap.min.css')
   link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap-responsive.min.css')
+  link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap.min.css')
+  link(rel='stylesheet', type='text/css', href='/stylesheets/font-awesome.min.css')
   link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
+  
   script(src="/javascripts/jquery-2.0.2.min.js")
   script(src="/javascripts/application.js")
   script(src="/javascripts/bootstrap.js")
