--- a/hack-express/views/Scoreboard.jade
+++ b/hack-express/views/Scoreboard.jade
@@ -38,7 +38,7 @@ block content
 
     div.tab-content#tab-content
       div.tab-pane#individual-scores
-        table.table.table-striped
+        table.table.table-striped#individual-table
           thead
             tr
               th Name
@@ -50,7 +50,7 @@ block content
               td #{userScore.score}
 
       div.tab-pane#team-scores
-        table.table.table-striped
+        table.table.table-striped#team-table
           thead
             tr
               th Name
