--- a/hack-express/views/Submissions.jade
+++ b/hack-express/views/Submissions.jade
@@ -33,7 +33,7 @@ block content
       span.icon-bar
       button.btn(type='submit') Submit
     div
-      table.table.table-striped
+      table.table.table-striped#submissions-table
         thead
           tr
             th Token
