resolved team score calculation issue.

--- a/hack-express/views/Scoreboard.jade
+++ b/hack-express/views/Scoreboard.jade
@@ -32,9 +32,9 @@ block content
 
     ul(data-tabs="tabs").nav.nav-tabs#tabs
       li
-        a(href="#individual-scores", data-toggle="tab") Individual
+        a(href="#individual-scores", data-toggle="tab") Individual Scores
       li
-        a(href="#team-scores", data-toggle="tab") Team
+        a(href="#team-scores", data-toggle="tab") Team Scores
 
     div.tab-content#tab-content
       div.tab-pane#individual-scores
