Fixed remove user button when editing teams

--- a/hack-express/views/admin/mixins/team_member.jade
+++ b/hack-express/views/admin/mixins/team_member.jade
@@ -3,4 +3,4 @@ mixin team_member(team_id, user_id, name)
 		td
 			| #{name}
 		td
-			a(href="/admin/teams/#{team_id}/members/#{user_id}", data-method="delete", rel="nofollow").delete-button.btn.btn-danger.pull-right Remove
+			a(href="/admin/teams/#{team_id}/members/#{user_id}", data-method="delete", rel="nofollow").btn.btn-danger.delete-button.pull-right Remove
